front: fix spacing buttons map

--- a/front/src/styles/scss/common/map/_map.scss
+++ b/front/src/styles/scss/common/map/_map.scss
@@ -23,7 +23,7 @@
   z-index: 2;
   top: 0;
   right: 0;
-  padding: 12px;
+  padding: 16px;
 
   .new-btn-map {
     color: var(--black100);
@@ -34,16 +34,18 @@
     outline: 3px solid rgba(152, 192, 245, 0.25);
     box-shadow: 0 0 0 1px var(--primary40) inset;
     background-color: rgba(255, 255, 255, 1);
-    margin-block: 4px;
+    margin-bottom: 8px;
 
     &:hover {
       outline-color: var(--primary30);
       box-shadow: 0 0 0 1px var(--primary80) inset;
     }
+
     &:focus {
       outline: 3px solid var(--primary30);
       box-shadow: 0 0 0 1px var(--primary80) inset;
     }
+
     &:active {
       outline: 2px solid var(--primary30);
       box-shadow: 0 0 0 1px var(--primary80) inset;
